
TODO:
         o    does not use dotargs

         o    Should we use model.frame() anywhere?

         o    Need to ensure masks consistent between nlfb and nlxb.

         o    Need to check if all parameters masked.

         o    Should allow jacfn to be specified in quotation marks to
              call numerical approximations of different types, as per
              optimr / optimx.

         o    Vignette to explain how stabilized Marquardt works, since
              Compact Numerical Methods book is hard to find.

190907   o    Had to remove vignette nlsr-nls-nlsLM as Windows fails to build.
              Source of issue not yet found.

190829   o    Due to changes in Ryacas, vignette nlsr-derivs required 
              a small edit.

190820   o    nlxb() and nlfb() do not follow nls() in the output
              structure and hence the use of predict(). A new function
              nlsr.predict() has been added.

         o    Vignette nlsr-nls-nlsLM added to explain prediction and
              differences between nlsr and related packages.

180128   o    A minor fix to derivs.R to avoid a bug when multiple
              partials are computed at once

         o    isFALSE now becoming part of R, so nlsr::isFALSE has been
              adjusted to be that code

171004   o    Minor edits to note nlmrt (deprecated) origins, and
              remove vignette dependency on that package         

170618   o    Minor repairs to vignette examples with other packages
         
170320   o    Added Vignette Title fields to the three vignettes
         
170117   o    rename modeldoc to rjfundoc. It is not simple to add 
              documentation to ssgrfun objects.

170116   o    summary no longer invisible?

         o    summary for nlxb and nlfb both now should work.
              If there is no name for a parameter, the name p_(position)
              is created.

         o    weights should be working OK. Residuals will be weighted ones.
