@@ -1,5 +1,7 @@
 
 TODO:
+         o    summary() gives unpleasant output format (220616)
+
          o    does not use dotargs
 
          o    Should we use model.frame() anywhere?
